Updated the landing page appearance. Fixed the buttons on create and changed alignment to be consistent.

--- a/app/templates/ui/styles/main.less
+++ b/app/templates/ui/styles/main.less
@@ -39,6 +39,16 @@ nav.nav {
   }
 }
 
+/* landing page */
+.panel-body {
+  min-height: 125px;
+}
+
+.panel > .panel-heading {
+  text-align: center;
+}
+
+
 /*footer*/
 footer {
   bottom: 0;
